--- a/colorGame.css
+++ b/colorGame.css
@@ -42,3 +42,19 @@ span{
     color:white;
     
 }
+
+ 
+
+#stripe{
+    
+    background-color: white;
+    height: 30px;
+    text-align: center;
+    
+}
+
+#stripe span {
+    
+    color:black;
+    
+}
