Finishing the design and tweeking the js

--- a/colorGame.css
+++ b/colorGame.css
@@ -1,7 +1,8 @@
 body{
     
-    background-color: #232323
-    
+    background-color: #232323;
+    margin: 0;
+    font-family: "Montserrat";
         
 }
 
@@ -13,8 +14,11 @@ body{
     background: green;
     padding-bottom: 30%;
     float:left;
-    margin: 1.66%
-    
+    margin: 1.66%;
+    border-radius: 15%;
+    transition: background 0.8s;
+    -webkit-transition:background 0.8s;
+    -moz-transition:background 0.8s;
 }
 
 #container{
@@ -28,13 +32,20 @@ body{
 h1{
     
     color: white;
+    font-weight: 400;
+    line-height: 1.1;
+    padding: 20px 0;
+    text-transform: uppercase;
+    text-align: center;
+    background-color: steelblue;
+    margin: 0;
     
 }
 
 #colorDisplay{
     
-   text-transform: capitalize;
-   
+     font-size: 200%;
+     display: block;
 }
 
 span{
@@ -61,6 +72,35 @@ span{
 
 .selected{
     
-    background-color: blue;
+    color: white;
+    background-color: steelblue;
+    
+}
+
+button{
+    border: none;
+    background: none;
+    height: 100%;
+    font-weight: 800;
+    color: steelblue;
+    letter-spacing: 1px;
+    font-size: inherit;
+    text-transform: uppercase;
+    transition: all 0.5s;
+       -webkit-transition: all 0.5s;
+       -moz-transition: all 0.5s;
+}
+
+#message{
+    
+    display: inline-block;
+    width: 20%;
+    
+}
+
+button:hover{
+    
+    color: white;
+    background-color: steelblue;
     
 }
